Fix spacing and sizes in #wiecej

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -261,6 +261,9 @@ body {
         font-weight: 800;
       }
     }
+    .smtext p {
+      font-size: 1rem;
+    }
     img {
       height: 5rem;
     }
